PLAT-1040 Fix vertical alignment of navigation logo (#431)

--- a/platform-core-module/src/main/resources/com/softicar/platform/core/module/page/navigation/page-navigation-style.css
+++ b/platform-core-module/src/main/resources/com/softicar/platform/core/module/page/navigation/page-navigation-style.css
@@ -110,6 +110,7 @@
 /* -------------------- PageNavigationLogoDiv -------------------- */
 
 .PageNavigationLogoDiv {
+	flex-direction: row;
 	align-content: center;
 	height: 50px;
 	padding: 5px 20px;
